style: renames customer->guest|check-pad->guest-check|check-pad-item->guest-check-item
