# app/rest/docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1
 definitions:
-  rest.AddCheckPadItemRequest:
+  rest.AddGuestCheckItemRequest:
     properties:
       code:
         type: integer
@@ -17,26 +17,35 @@ definitions:
       unit_price:
         type: number
     type: object
-  rest.CancelCheckPadItemRequest:
+  rest.CancelGuestCheckItemRequest:
     properties:
       canceled_reason:
         type: string
     type: object
-  rest.CancelCheckPadRequest:
+  rest.CancelGuestCheckRequest:
     properties:
       canceled_reason:
         type: string
     type: object
-  rest.CheckPad:
+  rest.CreateGuestCheckRequest:
+    properties:
+      guest_id:
+        type: string
+      local:
+        type: string
+      place_id:
+        type: string
+    type: object
+  rest.GuestCheck:
     properties:
       canceled_reason:
         type: string
       created_at:
         type: string
-      customer_id:
-        type: string
       final_price:
         type: number
+      guest_id:
+        type: string
       id:
         type: string
       local:
@@ -52,11 +61,9 @@ definitions:
       updated_at:
         type: string
     type: object
-  rest.CheckPadItem:
+  rest.GuestCheckItem:
     properties:
       canceled_reason:
-        type: string
-      check_pad_id:
         type: string
       code:
         type: integer
@@ -66,6 +73,8 @@ definitions:
         type: number
       final_price:
         type: number
+      guest_check_id:
+        type: string
       id:
         type: string
       name:
@@ -83,15 +92,6 @@ definitions:
       unit_price:
         type: number
       updated_at:
-        type: string
-    type: object
-  rest.CreateCheckPadRequest:
-    properties:
-      customer_id:
-        type: string
-      local:
-        type: string
-      place_id:
         type: string
     type: object
   rest.HTTPResponse:
@@ -109,24 +109,24 @@ info:
   contact:
     email: contato@coding4u.com.br
     name: Coding4u
-  description: Swagger API for Check Pad Service.
+  description: Swagger API for Guest Check Service.
   termsOfService: http://swagger.io/terms/
-  title: Check Pad Swagger API
+  title: Guest Check Swagger API
   version: "1.0"
 paths:
-  /check-pads:
+  /guest-checks:
     post:
       consumes:
       - application/json
-      description: Router for create a new check pad
-      operationId: createCheckPad
+      description: Router for create a new guest check
+      operationId: createGuestCheck
       parameters:
-      - description: JSON body for create a new check pad
+      - description: JSON body for create a new guest check
         in: body
         name: body
         required: true
         schema:
-          $ref: '#/definitions/rest.CreateCheckPadRequest'
+          $ref: '#/definitions/rest.CreateGuestCheckRequest'
       produces:
       - application/json
       responses:
@@ -142,19 +142,19 @@ paths:
           description: Forbidden
           schema:
             $ref: '#/definitions/rest.HTTPResponse'
-      summary: create a new check pad
+      summary: create a new guest check
       tags:
-      - Check Pad
-  /check-pads/{check_pad_id}:
+      - Guest Check
+  /guest-checks/{guest_check_id}:
     get:
       consumes:
       - application/json
-      description: Router for find a check pad
-      operationId: findCheckPad
+      description: Router for find a gust check
+      operationId: findGuestCheck
       parameters:
-      - description: Check pad ID
+      - description: Guest pad ID
         in: path
-        name: check_pad_id
+        name: guest_check_id
         required: true
         type: string
       produces:
@@ -163,7 +163,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/rest.CheckPad'
+            $ref: '#/definitions/rest.GuestCheck'
         "400":
           description: Bad Request
           schema:
@@ -172,27 +172,27 @@ paths:
           description: Forbidden
           schema:
             $ref: '#/definitions/rest.HTTPResponse'
-      summary: find a check pad
+      summary: find a gust check
       tags:
-      - Check Pad
-  /check-pads/{check_pad_id}/cancel:
+      - Guest Check
+  /guest-checks/{guest_check_id}/cancel:
     post:
       consumes:
       - application/json
-      description: Router for cancel a check pad
-      operationId: cancelCheckPad
+      description: Router for cancel a guest check
+      operationId: cancelGuestCheck
       parameters:
-      - description: Check pad ID
+      - description: Guest check ID
         in: path
-        name: check_pad_id
+        name: guest_check_id
         required: true
         type: string
-      - description: JSON body for cancel a check pad
+      - description: JSON body for cancel a guest check
         in: body
         name: body
         required: true
         schema:
-          $ref: '#/definitions/rest.CancelCheckPadRequest'
+          $ref: '#/definitions/rest.CancelGuestCheckRequest'
       produces:
       - application/json
       responses:
@@ -208,27 +208,27 @@ paths:
           description: Forbidden
           schema:
             $ref: '#/definitions/rest.HTTPResponse'
-      summary: cancel a check pad
+      summary: cancel a guest check
       tags:
-      - Check Pad
-  /check-pads/{check_pad_id}/items:
+      - Guest Check
+  /guest-checks/{guest_check_id}/items:
     post:
       consumes:
       - application/json
-      description: Router for add a check pad item
-      operationId: addCheckPadItem
+      description: Router for add a guest check item
+      operationId: addGuestCheckItem
       parameters:
-      - description: Check pad ID
+      - description: Guest check ID
         in: path
-        name: check_pad_id
+        name: guest_check_id
         required: true
         type: string
-      - description: JSON body for add a new check pad item
+      - description: JSON body for add a new guest check item
         in: body
         name: body
         required: true
         schema:
-          $ref: '#/definitions/rest.AddCheckPadItemRequest'
+          $ref: '#/definitions/rest.AddGuestCheckItemRequest'
       produces:
       - application/json
       responses:
@@ -244,24 +244,24 @@ paths:
           description: Forbidden
           schema:
             $ref: '#/definitions/rest.HTTPResponse'
-      summary: add a check pad item
+      summary: add a guest check item
       tags:
-      - Check Pad
-  /check-pads/{check_pad_id}/items/{check_pad_item_id}:
+      - Guest Check
+  /guest-checks/{guest_check_id}/items/{guest_check_item_id}:
     get:
       consumes:
       - application/json
-      description: Router for find a check pad item
-      operationId: findCheckPadItem
+      description: Router for find a guest check item
+      operationId: findGuestCheckItem
       parameters:
-      - description: Check pad ID
+      - description: Guest check ID
         in: path
-        name: check_pad_id
+        name: guest_check_id
         required: true
         type: string
-      - description: Check pad item ID
+      - description: Guest check item ID
         in: path
-        name: check_pad_item_id
+        name: guest_check_item_id
         required: true
         type: string
       produces:
@@ -270,7 +270,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/rest.CheckPadItem'
+            $ref: '#/definitions/rest.GuestCheckItem'
         "400":
           description: Bad Request
           schema:
@@ -279,32 +279,32 @@ paths:
           description: Forbidden
           schema:
             $ref: '#/definitions/rest.HTTPResponse'
-      summary: find a check pad item
+      summary: find a guest check item
       tags:
-      - Check Pad
-  /check-pads/{check_pad_id}/items/{check_pad_item_id}/cancel:
+      - Guest Check
+  /guest-checks/{guest_check_id}/items/{guest_check_item_id}/cancel:
     post:
       consumes:
       - application/json
-      description: Router for cancel a check pad item
-      operationId: cancelCheckPadItem
+      description: Router for cancel a guest check item
+      operationId: cancelGuestCheckItem
       parameters:
-      - description: Check pad ID
+      - description: Guest check ID
         in: path
-        name: check_pad_id
+        name: guest_check_id
         required: true
         type: string
-      - description: Check pad item ID
+      - description: Guest check item ID
         in: path
-        name: check_pad_item_id
+        name: guest_check_item_id
         required: true
         type: string
-      - description: JSON body for cancel a check pad item
+      - description: JSON body for cancel a guest check item
         in: body
         name: body
         required: true
         schema:
-          $ref: '#/definitions/rest.CancelCheckPadItemRequest'
+          $ref: '#/definitions/rest.CancelGuestCheckItemRequest'
       produces:
       - application/json
       responses:
@@ -320,19 +320,19 @@ paths:
           description: Forbidden
           schema:
             $ref: '#/definitions/rest.HTTPResponse'
-      summary: cancel a check pad item
+      summary: cancel a guest check item
       tags:
-      - Check Pad
-  /check-pads/{check_pad_id}/wait-payment:
+      - Guest Check
+  /guest-checks/{guest_check_id}/wait-payment:
     post:
       consumes:
       - application/json
-      description: Router for wait payment a check pad
-      operationId: waitPaymentCheckPad
+      description: Router for wait payment a guest check
+      operationId: waitPaymentGuestCheck
       parameters:
-      - description: Check pad ID
+      - description: Guest check ID
         in: path
-        name: check_pad_id
+        name: guest_check_id
         required: true
         type: string
       produces:
@@ -350,9 +350,9 @@ paths:
           description: Forbidden
           schema:
             $ref: '#/definitions/rest.HTTPResponse'
-      summary: wait payment a check pad
+      summary: wait payment a guest check
       tags:
-      - Check Pad
+      - Guest Check
 securityDefinitions:
   ApiKeyAuth:
     in: header
