# domain/entity/event.go
@@ -5,7 +5,7 @@ import (
 	"time"
 
 	"github.com/asaskevich/govalidator"
-	"github.com/c-4u/check-pad/utils"
+	"github.com/c-4u/guest-check/utils"
 	uuid "github.com/satori/go.uuid"
 )
 
